--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ backports.zoneinfo==0.2.1
 Django==4.2.2
 gunicorn==20.1.0
 mysqlclient==2.2.1
+psycopg2==2.9.9
+psycopg2-binary==2.9.9
 python-dotenv==1.0.0
 sqlparse==0.4.4
 typing_extensions==4.9.0
