--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,20 @@
 asgiref==3.7.2
 backports.zoneinfo==0.2.1
+boto3==1.34.22
+botocore==1.34.22
 Django==4.2.2
+django-storages==1.14.2
 gunicorn==20.1.0
+jmespath==1.0.1
 mysqlclient==2.2.1
 psycopg2==2.9.9
 psycopg2-binary==2.9.9
+python-dateutil==2.8.2
 python-dotenv==1.0.0
+s3transfer==0.10.0
+six==1.16.0
 sqlparse==0.4.4
 typing_extensions==4.9.0
 tzdata==2023.4
+urllib3==1.26.18
 whitenoise==6.4.0
